syntax = "proto3";

package model;

option go_package = "github.com/duc-cnzj/execit-client/model;model";

message ClusterModel {
  int64 id = 1;
  string name = 2;
  string kube_config = 3;
  string api_server_url = 4;
  string created_at = 5;
  string updated_at = 6;
  string deleted_at = 7;
  string namespace = 8;
}

message CardModel {
  int64 id = 1;
  string type = 2;
  string namespace = 3;
  string name = 4;
  int64 cluster_id = 6;
  string created_at = 7;
  string updated_at = 8;
  string deleted_at = 9;
}

message FileModel {
  int64 id = 1;
  string path = 2;
  uint64 size = 3;
  string username = 4;
  string namespace = 5;
  string pod = 6;
  string container = 7;
  string container_path = 8;
  string created_at = 9;
  string updated_at = 10;
  string deleted_at = 11;
  bool is_deleted = 12;
}